--- a/i18n/En.json
+++ b/i18n/En.json
@@ -40,6 +40,30 @@
   "txt_ver_mas": "See More",
   "txt_section1":"YOUR TRUSTED EVENT COMPANY.",
   "txt_section2":"Discover our services",
+
+"txt_quienSomosPregunta" : "Who are you?", 
+"txt_quienSomos" : "We are a group of businessmen who are dedicated to event management from meetings with clients. When you know someone, the most normal thing is to ask them what they do. If they respond by Management I'm sure you have a lot of questions about what exactly or who are the events.",
+"txt_queEventosOfrecemos" : "What events do we offer?",
+"txt_eventoOfrecemos1" : "Our services include the development fence, the contracting of service providers, the planning and execution of the program, the design and decoration of the property, logistics and transport, security and catering services. We also offer marketing and promotional services to help increase assistance and the impact of events.",
+"txt_eventoOfrecemos2" : "Our company has established itself as a leader in the event management market, with a large number of satisfied clients who have trusted us for the most important event events. Our experience in the industry allows us to anticipate and solve problems ahead of us, guaranteeing a successful event and no problems.",
+"txt_enQueNosCentramos" : "What do we focus on?",
+"txt_enQue1": "In short, we are a reliable and professional event management company, with a focus on customer service and the creation of unique and unforgettable experiences. We have a highly trained and experienced team, and offer a wide range of services to help our clients plan and execute eventualities.",
+"txt_enQue2" : "In addition to our traditional event planning and execution services, we also offer a variety of personalized options and packages to satisfy the specific needs of each client. For example, we offer themed event packages, such as themed weddings, themed anniversary festivities and themed corporate events. We also offer virtual event packages for those clients who prefer to complete their events online due to the pandemic.", 
+"txt_trabajounicoTitulo" : " A Unique Work ", 
+"txt_TrabajoUnico" : "We strive to be a sustainable and responsible company, and we work with suppliers and collaborators who share our values. In addition, we work closely with our clients to ensure we meet their requirements and budgets, and we are always looking for ways to improve our services and offer added value.",
+"txt_textoRes" : "In short, we are a trusted and professional event management company, we offer a wide range of services to help our clients plan and execute successful events, and we are always looking for ways to improve and offer added value. If you are looking for a reliable and experienced company to help you with your events, do not hesitate to contact us!",
+"txt_nuestrosLocales" : "Our Locals",
+"txt_FotoLocalBadalona" : "Photo of our location in Badalona.",
+"txt_FotoLocalGracia" : "Photo of our location in Gracia.",
+"txt_FotoLocalHospitalet" : "Photo of our local in Hopitalet",
+"txt_FotoLocalPuerto" :" Photo of our location in Port de Barcelona.",
+"txt_Locales1" : "Despite having our own premises for holding events and offices, our company has specialized in the rental of premises for events throughout the country. We currently have over 20,000 venue options available for hire, from small conference rooms to large venues for trade shows and concerts.",
+"txt_Locales2" : "We pride ourselves on offering a wide range of options to meet the needs of any type of event, and strive to maintain a close relationship with our clients to ensure they find the perfect venue for their needs. In addition, we make sure to keep our premises in excellent condition to ensure a satisfactory experience for our customers and their guests.",
+"txt_Locales3" : "In our company we are in constant growth and evolution, and we have plans to expand our premises rental services at a European level. We are excited to continue to offer a wide range of options to our clients and help them plan and execute successful events in a variety of venues across Europe.",
+"txt_Locales4" : "In summary, our company specializes in the rental of premises for events, offering more than 20,000 options throughout the country. We pride ourselves on offering a wide range of options to meet the needs of any type of event and maintain a close relationship with our clients to ensure they find the perfect venue. In addition, we are planning to expand our services at a European level",
+
+
+
   
   
   
